syntax = "proto3";

package samplePackage;

service Sample {
  rpc PingPong(PingRequest) returns (PongResponse) {};
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}


